--- a/Drum-MIDI-Converter/src/.vscode/settings.json
+++ b/Drum-MIDI-Converter/src/.vscode/settings.json
@@ -42,6 +42,9 @@
         "xstddef": "cpp",
         "xtr1common": "cpp",
         "xtree": "cpp",
-        "xutility": "cpp"
+        "xutility": "cpp",
+        "algorithm": "cpp",
+        "cinttypes": "cpp",
+        "fstream": "cpp"
     }
 }
