Switched to c++20, using std::optional

--- a/Drum-MIDI-Converter/src/.vscode/settings.json
+++ b/Drum-MIDI-Converter/src/.vscode/settings.json
@@ -45,6 +45,9 @@
         "xutility": "cpp",
         "algorithm": "cpp",
         "cinttypes": "cpp",
-        "fstream": "cpp"
-    }
+        "fstream": "cpp",
+        "optional": "cpp"
+    },
+    "C_Cpp.default.cppStandard": "c++20",
+    "C_Cpp.default.cStandard": "c17"
 }
