--- a/Drum-MIDI-Converter/src/.vscode/settings.json
+++ b/Drum-MIDI-Converter/src/.vscode/settings.json
@@ -46,7 +46,8 @@
         "algorithm": "cpp",
         "cinttypes": "cpp",
         "fstream": "cpp",
-        "optional": "cpp"
+        "optional": "cpp",
+        "filesystem": "cpp"
     },
     "C_Cpp.default.cppStandard": "c++20",
     "C_Cpp.default.cStandard": "c17"
