--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 Mappings
 **/.vscode
-./src/CMakeFiles/
-./src/cmake_install.cmake
-./src/CMakeCache.txt
-./src/Makefile
-./src/main
+src/CMakeFiles/
+src/cmake_install.cmake
+src/CMakeCache.txt
+src/Makefile
+src/main
