--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
-*
-!builds/
-!src/
-!.gitignore
-!README.md
+/build-DrumMIDIConverter-Desktop_Qt_6_2_2_MSVC2019_64bit-Debug/
+/build-DrumMIDIConverter-Desktop_Qt_6_2_2_MSVC2019_64bit-Release/
+/.vs/
+/QT-src/
