--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /build-DrumMIDIConverter-Desktop_Qt_6_2_2_MSVC2019_64bit-Debug/
 /build-DrumMIDIConverter-Desktop_Qt_6_2_2_MSVC2019_64bit-Release/
 /.vs/
+/python-dash-app/__py_cache__/
