removed craigsapp midifile library

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
 /build-DrumMIDIConverter-Desktop_Qt_6_2_2_MSVC2019_64bit-Debug/
 /build-DrumMIDIConverter-Desktop_Qt_6_2_2_MSVC2019_64bit-Release/
 /.vs/
+/src-cpp/midifile/
 /src-python/__pycache__/
 /src-python/assets/
+/update-mappings/CMakeFiles/
+/update-mappings/cmake_install.cmake
+/update-mappings/CMakeCache.txt
+/update-mappings/Makefile
+/update-mappings/update
