--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
+/.vs/
+/.vscode/
 /build-DrumMIDIConverter-Desktop_Qt_6_2_2_MSVC2019_64bit-Debug/
 /build-DrumMIDIConverter-Desktop_Qt_6_2_2_MSVC2019_64bit-Release/
-/.vs/
 /src-cpp/midifile/
 /src-python/__pycache__/
 /src-python/assets/
